<resources>
    <string name="app_name">CatCares</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opening1">Selamat Datang di CatCares</string>
    <string name="subOpening1">CatCares menawarkan kemudahan kepada pengguna dalam melakukan perawatan pada kucing anda</string>
    <string name="opening2">Pastikan Kesehatan Kucingmu dengan CatCares</string>
    <string name="subOpening2">Di CatCares, Kalian bisa melakukan check up rutin tanpa perlu ribet mencari dokter terdekat</string>
    <string name="opening3">Ikuti Perkembangan Kucingmu Dengan Mudah</string>
    <string name="subOpening3">Dengan CatCares anda dapat mengetahui perkembangan kucingmu dengan mudah</string>
    <string name="skip">Lewati</string>
    <string name="next">Selanjutnya</string>
    <string name="On_boarding1">Foto Opening 1</string>
    <string name="On_boarding2">Foto Opening 2</string>
    <string name="On_boarding3">Foto Opening 3</string>
    <string name="logo">logo</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="photo_login">Foto Login</string>
    <string name="login_title">Selamat Datang di CatCares</string>
    <string name="login_subtitle">Silahkan masuk menggunakan akun anda</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_password">Masukkan Password</string>
    <string name="input_first_name">Masukkan Nama Depan</string>
    <string name="input_last_name">Masukkan Nama Belakang</string>
    <string name="input_address">Masukkan Alamat</string>
    <string name="input_no_hp">Masukkan Nomor Handphone</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="invalid_password">Password minimal 6 karakter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="no_hp">No Handphone</string>
    <string name="register_title">Daftar Sekarang Juga!</string>
    <string name="register_subtitle">Isi data di bawah ini untuk mendaftar</string>
    <string name="password_doesnt_match">Password tidak sama</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="email_already_registered">Email sudah terdaftar</string>
    <string name="register_success">Pendaftaran Berhasil</string>
    <string name="register_failed">Pendaftaran Gagal</string>
    <string name="login_success">Login Berhasil</string>
    <string name="login_failed">Login Gagal</string>
    <string name="email_or_password_incorrect">Email atau Password Salah</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_check_up">Check Up</string>
    <string name="title_article">Halaman Artikel</string>
    <string name="title_profile">Profil</string>
    <string name="title_detection">Halaman Deteksi</string>
    <string name="cat_data">Data Kucing</string>
    <string name="location_doctor">Lokasi Dokter Terdekat</string>
    <string name="theme_change">Ubah Tema</string>
    <string name="language_change">Ubah Bahasa</string>
    <string name="see_all">Lihat Semua</string>
    <string name="photo_profile">Foto Profil</string>
    <string name="title_forgot_password">Password Anda Lupa?</string>
    <string name="subtitle_forgot_password">Masukkan email anda untuk melakukan reset password</string>
    <string name="reset_password">Reset Password</string>
    <string name="check_email">Periksa email untuk mengatur ulang kata sandi Anda!</string>
    <string name="logout">Keluar</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="add_photo">Tambah Foto</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="logout_confirmation">Apakah anda yakin ingin keluar?</string>
    <string name="login_first">Silahkan login terlebih dahulu</string>
    <string name="update_profil">Perbarui</string>
    <string name="update_profil_success">Profil berhasil diperbarui</string>
    <string name="update_profil_failed">Profil gagal diperbarui</string>
    <string name="name_required">Nama tidak boleh kosong</string>
    <string name="phone_required">No HP tidak boleh kosong</string>
    <string name="address_required">Alamat tidak boleh kosong</string>
    <string name="email_required">Email tidak boleh kosong</string>
    <string name="password_required">Password tidak boleh kosong</string>
    <string name="first_name_long">Nama depan maksimal 15 karakter</string>
    <string name="last_name_long">Nama belakang maksimal 15 karakter</string>
    <string name="address">Alamat</string>
    <string name="Info">Informasi</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="text_article">8 Cara Merawat Kucing dan Memeliharanya dengan Benar</string>
    <string name="date_article">12 Februari 2023</string>
    <string name="search_article">Cari Artikel</string>
    <string name="list_article">Daftar Artikel</string>
    <string name="welcome">Halo,</string>
    <string name="notification">menu notifikasi</string>
    <string name="add_cat">Tambah Data Kucing</string>
    <string name="name_cat">Nama Kucing</string>
    <string name="type_cat">Nama Ras</string>
    <string name="age_cat">Umur</string>
    <string name="change_cat">Ganti Kucing</string>
    <string name="choose_check_up">Pilih Jenis Check Up</string>
    <string name="vaccine">Vaksin</string>
    <string name="check_tooth">Cek Gigi</string>
    <string name="check_nutrition">Cek Nutrisi</string>
    <string name="measurements">Pengukuran</string>
    <string name="choose_date">Pilih waktu dan tanggal</string>
    <string name="input_waktu">Pilih Waktu</string>
    <string name="input_date">Pilih Tanggal</string>
    <string name="tv_add_note">Tambahkan Catatan</string>
    <string name="add_note">Beri Catatan</string>
    <string name="search_doctor">Cari Dokter</string>
    <string name="add">Tambah</string>
    <string name="upcoming_schedule">Jadwal Mendatang</string>
    <string name="all_see">Lihat Semua</string>
    <string name="doctor_name">Nama Doktor</string>
    <string name="spesialis">Jenis spesialis</string>
    <string name="time">Pukul 09.00 WIB</string>
    <string name="date">Senin, 28 Mei 2023</string>
    <string name="tv_doctor">Dokter Hewan Teratas</string>
    <string name="tv_article">Artikel Terkini</string>
    <string name="not_permission">Tidak memiliki izin</string>
    <string name="update_success">User telah diupdate</string>
    <string name="retry">Coba lagi</string>
    <string name="list_doctor">Daftar Dokter</string>
    <string name="detail_doctor">Detail Dokter</string>
    <string name="detection">Deteksi</string>
    <string name="article">Artikel</string>
    <string name="galery">Galeri</string>
    <string name="Camera">Kamera</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="choose_picture">Pilih Foto</string>
    <string name="danger">Kucing Anda Terkena Ringworm</string>
    <string name="backtohome">Kembali ke Beranda</string>
    <string name="save">Kucing Aman Dari Ringworm</string>
    <string name="text_terdeteksi">Silahkan hubungi dokter hewan terdekat untuk mengambil tindakan lebih lanjut</string>
    <string name="text_aman">Terus pantau kesehatan kucing kamu ya!</string>
    <string name="title_cats">Kucing</string>
    <string name="input_name_cat">Masukkan nama kucing</string>
    <string name="input_age_cat">Masukkan umur kucing</string>
    <string name="input_color_cat">Masukkan warna kucing</string>
    <string name="input_gender_cat">Masukkan kelamin kucing</string>
    <string name="input_type_cat">Masukkan ras kucing</string>
    <string name="input_weight_cat">Masukkan berat kucing</string>
    <string name="updload">Tambah kucing</string>
    <string name="name_cat_field">Nama kucing tidak boleh kosong</string>
    <string name="ras_cat_field">Ras kucing tidak boleh kosong</string>
    <string name="gender_cat_field">kelamin kucing tidak boleh kosong</string>
    <string name="age_cat_field">Umur kucing tidak boleh kosong</string>
    <string name="weight_cat_field">Berat kucing tidak boleh kosong</string>
    <string name="color_cat_field">Warna kucing tidak boleh kosong</string>
    <string name="add_cat_success">Kucing berhasil dibuat</string>
    <string name="add_cat_failed">Kucing gagal ditambahkan</string>
</resources>