<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.checkup.CheckUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_cat"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_cat"
            android:contentDescription="@string/add_cat"
            android:src="@drawable/ic_profile_cat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/profile_cat"
            app:layout_constraintStart_toEndOf="@+id/profile_cat"
            app:layout_constraintTop_toTopOf="@+id/profile_cat">

            <TextView
                android:id="@+id/tv_name_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/psemibold"
                android:text="@string/name_cat"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_type_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pregular"
                    android:text="@string/type_cat"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/pregular"
                    android:text="|"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_age_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pregular"
                    android:text="@string/age_cat"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_add_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_notif"
            android:contentDescription="@string/add_cat"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/btn_change_cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_change_cat"
            tools:ignore="DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_change_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_notif"
            android:contentDescription="@string/change_cat"
            android:src="@drawable/ic_change_cats"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_cat"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_choose_check_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/psemibold"
            android:text="@string/choose_check_up"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_cat" />

        <RadioGroup
            android:id="@+id/radio_group_check_up"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_choose_check_up">

            <RadioButton
                android:id="@+id/radio_vaccine"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/type_check_up"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_vaccine"
                android:fontFamily="@font/psemibold"
                android:paddingVertical="16dp"
                android:text="@string/vaccine"
                android:textAlignment="center"
                android:textColor="@drawable/color_check_up"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/radio_check_tooth"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/type_check_up"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_check_tooth"
                android:fontFamily="@font/psemibold"
                android:paddingVertical="16dp"
                android:text="@string/check_tooth"
                android:textAlignment="center"
                android:textColor="@drawable/color_check_up"
                android:textSize="10sp"
                app:drawableTint="@drawable/color_check_up" />

            <RadioButton
                android:id="@+id/radio_check_nutrition"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/type_check_up"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_nutritions"
                android:fontFamily="@font/psemibold"
                android:paddingVertical="16dp"
                android:text="@string/check_nutrition"
                android:textAlignment="center"
                android:textColor="@drawable/color_check_up"
                android:textSize="10sp"
                app:drawableTint="@drawable/color_check_up" />

            <RadioButton
                android:id="@+id/radio_measurement"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:background="@drawable/type_check_up"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_measurements"
                android:fontFamily="@font/psemibold"
                android:paddingVertical="14dp"
                android:text="@string/measurements"
                android:textAlignment="center"
                android:textColor="@drawable/color_check_up"
                android:textSize="10sp"
                app:drawableTint="@drawable/color_check_up" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/psemibold"
            android:text="@string/choose_date"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_check_up" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_choose_date">

            <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/form_input"
                android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/pregular"
                android:hint="@string/input_date"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/et_time"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/et_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/form_input"
                android:drawableEnd="@drawable/ic_baseline_access_time_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/pregular"
                android:hint="@string/input_waktu"
                android:padding="10dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_date"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/psemibold"
            android:text="@string/tv_add_note"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_date_time" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/add_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_note">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_note"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/form_input"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearchDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/blue_500"
            android:fontFamily="@font/psemibold"
            android:padding="10dp"
            android:text="@string/search_doctor"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_note" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>